--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "bcryptjs": "^2.4.3",
     "hono": "^4.5.7",
     "prisma": "^5.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
+    "@types/bcryptjs": "^2.4.6",
     "wrangler": "^3.57.2"
   }
 }
