--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "bcryptjs": "^2.4.3",
     "hono": "^4.5.7",
     "prisma": "^5.18.0",
+    "resend": "^4.0.1-alpha.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^22.9.0",
     "wrangler": "^3.57.2"
   }
 }
